--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-ai-webhook-starter",
+  "name": "common-chatbot-ui-starter-project",
   "version": "0.0.0",
   "description": "",
   "main": "dist/server.js",
@@ -7,13 +7,13 @@
     "build": "babel src -d dist -w -s",
     "start": "node dist/server.js"
   },
-  "repository": "",
+  "repository": "https://github.com/ianrichard/common-chatbot-ui-starter-project",
   "author": "Ian Smith <smith.ianrichard@gmail.com>",
   "dependencies": {},
   "devDependencies": {
-    "api-ai-webhook-utils": "0.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "common-chatbot-ui": "^0.0.0",
     "express": "^4.16.1",
     "localtunnel": "^1.8.3"
   },
