--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   },
   "repository": "https://github.com/ianrichard/common-chatbot-ui-starter-project",
   "author": "Ian Smith <smith.ianrichard@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "common-chatbot-ui": "^0.1.0"
+  },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "common-chatbot-ui": "^0.1.0",
-    "express": "^4.16.2",
     "localtunnel": "^1.8.3"
   },
   "babel": {
