--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "babel src -d dist -w -s",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "dev": "babel src -d dist -w -s & babel node_modules/common-chatbot-ui/src -d node_modules/common-chatbot-ui/lib -w -s  & nodemon dist/server.js & lt --port 8080"
   },
   "repository": "https://github.com/ianrichard/common-chatbot-ui-starter-project",
   "author": "Ian Smith <smith.ianrichard@gmail.com>",
@@ -15,7 +16,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "localtunnel": "^1.8.3"
+    "localtunnel": "^1.8.3",
+    "nodemon": "^1.12.1"
   },
   "babel": {
     "presets": [
