--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "repository": "https://github.com/ianrichard/common-chatbot-ui-starter-project",
   "author": "Ian Smith <smith.ianrichard@gmail.com>",
   "dependencies": {
-    "common-chatbot-ui": "^0.1.0"
+    "common-chatbot-ui": "^0.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "google-cloud": "^0.57.0",
     "localtunnel": "^1.8.3",
     "nodemon": "^1.12.1"
   },
