feature: create dev scripts file to run independent spawned children instead of chained command line processes from package.json

--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "scripts": {
     "build": "babel src -d dist --copy-files -s",
     "start": "node dist/server.js",
-    "dev": "babel src -d dist --copy-files -w -s & babel ../common-chatbot/src -d node_modules/common-chatbot/lib --copy-files -w -s & nodemon dist/server.js & lt --subdomain yoursubdomain --port 8080"
+    "dev": "node dev-scripts.js"
   },
   "repository": "https://github.com/ianrichard/common-chatbot-starter-project",
   "author": "Ian Smith <smith.ianrichard@gmail.com>",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "common-chatbot": "^0.0.0",
+    "common-chatbot": "^1.0.0",
     "express": "^4.16.2",
     "request": "^2.83.0"
   },
